--- a/MyApplication2/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_login.xml
@@ -28,12 +28,10 @@
                 android:text="FACEBOOK LOGIN"
                 android:layout_weight="2"
                 android:layout_gravity="center"/>
-            <Button
-                android:id="@+id/logout"
+            <TextView
                 android:layout_width="0dp"
                 android:layout_weight = "1"
-                android:layout_height="wrap_content"
-                android:text="logout"
+                android:layout_height="match_parent"
                 />
         </LinearLayout>
     </LinearLayout>
