--- a/MyApplication2/app/src/main/res/layout/fragment_3.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_3.xml
@@ -5,94 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".Fragment3">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:weightSum="1"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.35"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text=""
-                android:gravity="center">
-
-            </TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="0.35"
-            >
-
-            <ImageButton
-                android:id="@+id/male_button"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src = "@drawable/boy"
-                android:background="#00000000"
-                android:scaleType="centerCrop"></ImageButton>
-
-
-            <ImageButton
-                android:id="@+id/female_button"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src = "@drawable/girl"
-                android:background="#00000000"
-                android:scaleType="centerCrop"></ImageButton>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:id="@+id/male_text"
-                android:text="남자 연예인"
-                android:textSize = "20sp"
-                android:gravity="center"> </TextView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:id="@+id/female_text"
-                android:text="여자 연예인"
-                android:textSize = "20sp"
-                android:gravity="center"> </TextView>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/sunglasses"
-            android:id="@+id/sunglasses_1"
-            android:visibility="invisible"
-            >
-        </ImageView>
-
-    </LinearLayout>
+   <Button
+       android:id="@+id/logout_btn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:text="logout"/>
 
 </FrameLayout>
