--- a/MyApplication2/app/src/main/res/layout/fragment_1.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_1.xml
@@ -6,7 +6,7 @@
     tools:context=".Fragment1"
     tools:showIn="@layout/activity_main">
 
-    <!-- TODO: Update blank fragment layout -->
+<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,10 +45,12 @@
                 />
         </LinearLayout>
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler1"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listview1" />
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <Button
