--- a/MyApplication2/app/src/main/res/layout/recyclerview_item.xml
+++ b/MyApplication2/app/src/main/res/layout/recyclerview_item.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/recycler_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        app:layout_constraintLeft_toRightOf="@id/recycler_image"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="30dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
