--- a/MyApplication2/app/src/main/res/layout/fragment_1.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_1.xml
@@ -54,13 +54,14 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:textStyle="bold"
         android:id ="@+id/button_frag1"
         android:text = "+"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft ="10dp"
+        android:autoSizeTextType="uniform"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight ="10dp"
         />
 
 </FrameLayout>
