--- a/MyApplication2/app/src/main/res/layout/fragment_3.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_3.xml
@@ -3,13 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment3">
 
-   <Button
-       android:id="@+id/logout_btn"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_gravity="center"
-       android:text="logout"/>
+    <ListView
+        android:id="@+id/listView_tab3"
+        android:layout_width="match_parent"
+        android:layout_height="687dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="0dp" />
+
 
 </FrameLayout>
