--- a/MyApplication2/app/src/main/res/layout/activity_create_post.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_create_post.xml
@@ -26,7 +26,7 @@
             android:gravity="center"/>
 
         <Button
-            android:id="@+id/to_beaches_btn"
+            android:id="@+id/submit_btn"
             android:layout_width="0dp"
             android:layout_weight="1.5"
             android:textSize="10sp"
@@ -59,7 +59,9 @@
             android:layout_height="0dp"
             android:maxLines="2"
             android:layout_weight="1"
+            android:hint="제목을 입력하세요."
             android:padding="10dp"
+            android:inputType="text"
             android:background="@drawable/edittext_border"/>
 
         <EditText
@@ -69,6 +71,8 @@
             android:maxLines="10"
             android:padding="10dp"
             android:gravity="left|top"
+            android:hint="내용을 입력하세요."
+            android:inputType="text"
             android:background="@drawable/edittext_border"
             android:layout_marginTop="10dp"
             android:layout_weight="8"/>
