--- a/MyApplication2/app/src/main/res/layout/beach_listview_item.xml
+++ b/MyApplication2/app/src/main/res/layout/beach_listview_item.xml
@@ -1,6 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="150dp">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="3"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:id="@+id/beach_text"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:autoSizeTextType="uniform"
+            android:layout_weight="1"
+            android:textStyle="bold"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:id="@+id/wave_image_and_info"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            >
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/wave" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/wave_info"
+                android:gravity="center"
+                android:autoSizeTextType="uniform"
+                />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/level"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:autoSizeTextType="uniform"
+            android:gravity="center"
+            android:textStyle="normal"
+            android:textColor="#000000"/>
+
+
+    </LinearLayout>
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/imageView1"-->
+<!--        android:layout_weight="1" />-->
+
+<!--    <LinearLayout-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="4">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="New Text"-->
+<!--            android:id="@+id/textView1"-->
+<!--            android:textSize="24dp"-->
+<!--            android:textColor="#000000"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_weight="2" />-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="New Text"-->
+<!--            android:id="@+id/textView2"-->
+<!--            android:textSize="16dp"-->
+<!--            android:textColor="#666666"-->
+<!--            android:layout_weight="1" />-->
+<!--    </LinearLayout>-->
 
 </LinearLayout>
