--- a/MyApplication2/app/src/main/res/layout/fragment_3.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_3.xml
@@ -6,14 +6,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment3">
 
-    <ListView
-        android:id="@+id/listView_tab3"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="687dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="0dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:id="@+id/sea_name"
+            />
+        <ListView
+            android:id="@+id/listView_tab3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="0dp" />
+
+    </LinearLayout>
 
 
 </FrameLayout>
