--- a/MyApplication2/app/src/main/res/layout/activity_posts.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_posts.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"/>
 
         <TextView
+            android:id="@+id/beach_title"
             android:layout_width="0dp"
             android:layout_weight="8"
             android:text="Test"
