--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,12 @@
             android:layout_height="wrap_content"
             android:text="Setting" />
 
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_Item4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notification" />
+
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
