--- a/MyApplication2/app/src/main/res/layout/activity_specific__beach.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_specific__beach.xml
@@ -6,13 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".Specific_Beach">
 
-    <ListView
-        android:id="@+id/listview_beach"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="687dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="0dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <LinearLayout
+            android:id="@+id/post_appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/specific_beach_back"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_arrow_back"
+                android:layout_height="match_parent"/>
+
+            <TextView
+                android:id="@+id/sea_name"
+                android:layout_width="0dp"
+                android:layout_weight="8"
+                android:text="Test"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:id="@+id/sea_name"-->
+<!--            android:textStyle="bold"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="20dp"/>-->
+        <ListView
+            android:id="@+id/listview_beach"
+            android:layout_width="match_parent"
+            android:layout_height="687dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="0dp" />
+    </LinearLayout>
+
 
 </FrameLayout>
