--- a/MyApplication2/app/src/main/res/layout/beach_listview_item.xml
+++ b/MyApplication2/app/src/main/res/layout/beach_listview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="100dp">
 
 
     <LinearLayout
@@ -14,47 +14,50 @@
         <TextView
             android:id="@+id/beach_text"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:gravity="center"
             android:textColor="#000000"
-            android:autoSizeTextType="uniform"
+            android:textSize="20dp"
             android:layout_weight="1"
             android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="50dp"
             android:id="@+id/wave_image_and_info"
             android:orientation="horizontal"
             android:layout_weight="1"
             >
 
             <ImageView
-                android:layout_width="80dp"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/wave" />
-            <TextView
+                android:src="@drawable/wave"
+                android:layout_marginLeft="25dp"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/wave_info"
-                android:gravity="center"
-                android:autoSizeTextType="uniform"
-                />
-
-
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:id="@+id/wave_info"
+                    android:gravity="center"
+                    android:textSize="25dp"
+                    />
+                <TextView
+                    android:id="@+id/level"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"
+                    android:autoSizeTextType="uniform"
+                    android:gravity="center"
+                    android:textStyle="normal"
+                    android:textColor="#000000"/>
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/level"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:textStyle="normal"
-            android:textColor="#000000"/>
-
-
     </LinearLayout>
 
 <!--    <TextView-->
