--- a/MyApplication2/app/src/main/res/layout/fragment_3.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_3.xml
@@ -6,28 +6,75 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment3">
 
-    <LinearLayout
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:text="원하는 지역을 클릭하세요."
+        />
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:src="@drawable/map" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:id="@+id/sea_name"
-            />
-        <ListView
-            android:id="@+id/listView_tab3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="0dp" />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/east_sea"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="240dp"
+            android:layout_marginTop="250dp"
+            android:autoSizeTextType="uniform"
+            android:background="#00ff0000"
+            android:text="동해"
+            android:textColor="@color/black" />
+
+
+        <Button
+            android:id="@+id/west_sea"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="300dp"
+            android:autoSizeTextType="uniform"
+            android:background="#00ff0000"
+            android:text="서해"
+            android:textColor="@color/black" />
+
+        <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="360dp"
+        android:autoSizeTextType="uniform"
+        android:background="#00ff0000"
+        android:text="남해"
+        android:id="@+id/south_sea"
+        android:textColor="@color/black"/>
+
+    <Button
+        android:id="@+id/jeju"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="455dp"
+        android:autoSizeTextType="uniform"
+        android:background="#00ff0000"
+        android:text="제주"
+        android:textColor="@color/black" />
+
+<!--        <ListView-->
+<!--        android:id="@+id/listView_tab3"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="687dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginTop="0dp" />-->
+
 
 
 </FrameLayout>
