--- a/MyApplication2/app/src/main/res/layout/fragment_4.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_4.xml
@@ -6,7 +6,7 @@
     tools:context=".Fragment4">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/post_list_recyclerView"
+        android:id="@+id/noti_recyclerView"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
